force-app/main/default/objects/CreditCodeSequence__c/CreditCodeSequence__c.object-meta.xml
<CustomObject>
    <description>保存每个客户编码类别的下一可用序号。</description>
    <label>客户编码序列</label>
    <nameField>
        <displayFormat>SEQ-{0000}</displayFormat>
        <label>序列记录编号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>