force-app/main/default/objects/CreditCodeSequence__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>稳定的序列类别键，例如 SPECIAL_UNIT、MILITARY、HONG_KONG。</description>
    <externalId>true</externalId>
    <label>序列类别</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>