force-app/main/default/objects/CreditCodeSequence__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>说明</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>