force-app/main/default/objects/CreditCodeSequence__c/fields/LastIssuedAccount__c.field-meta.xml
<CustomField>
    <fullName>LastIssuedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>最近发号客户</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>客户编码序列</relationshipLabel>
    <relationshipName>CreditCodeSequences</relationshipName>
    <type>Lookup</type>
</CustomField>