force-app/main/default/objects/CreditCodeSequence__c/fields/LastIssuedAt__c.field-meta.xml
<CustomField>
    <fullName>LastIssuedAt__c</fullName>
    <label>最近发号时间</label>
    <type>DateTime</type>
</CustomField>