force-app/main/default/objects/CreditCodeSequence__c/fields/NextSeq__c.field-meta.xml
<CustomField>
    <fullName>NextSeq__c</fullName>
    <defaultValue>1</defaultValue>
    <description>下一次可使用的序号，不是已发出的最大序号。</description>
    <label>下一可用序号</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>