force-app/main/default/objects/CreditCodeSequence__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NextSeq__c</columns>
    <columns>Category__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LastIssuedAccount__c</columns>
    <columns>LastIssuedAt__c</columns>
    <filterScope>Everything</filterScope>
    <label>全部</label>
</ListView>